<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/goToSettings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_settings"
        />
    <item
        android:id="@+id/goToLauncher"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/returnItem"
        />
    <item
        android:id="@+id/clearBoard"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/clearSentenceBoard"
        />
    <item
        android:id="@+id/goToParrot"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/returnItem"
        />
    
</menu>