<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:GComponent="http://schemas.android.com/apk/res-auto"
    android:id="@+id/options_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
            android:textColor="#000000"
            android:id="@+id/pictogramSetting"
            android:textSize="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
       		android:layout_marginLeft="50dp"
            android:text="@string/pictogramOptions" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:textColor="#000000"
                    android:id="@+id/pictogramSettings"
                    android:textSize="20sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:text="@string/PictoSize" />
                <Switch
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/swtPictogramSize"
                    android:textColor="#000000"
                    android:textOn="Stor"
                    android:textOff="Lille" />
                </LinearLayout>
    <CheckBox
            android:id="@+id/checkBoxShowText"
            android:textColor="#000000"
    	   	android:layout_marginLeft="50dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="onShowTextChanged"
            android:text="@string/textToPic"
            android:textSize="20sp"
            />
</LinearLayout>